--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,4 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbose --release
+      run: 
+        rustup default nightly
+        cargo build --verbose --release
