--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
+    - name: Switch nightly
       run: 
         rustup default nightly
+    - name: Build
+      run: 
         cargo build --verbose --release
