merge: steve-xmh's widgets
Co-Authored-By: SteveXMH <39523898+steve-xmh@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ winres = "0.1"
 
 [dependencies]
 druid = {git = "https://github.com/linebender/druid"}
+scl-gui-widgets = { path = "../SharpCraftLauncher/scl-gui-widgets" }
 futures = "0.3"
 reqwest = { version = "*", features = ["stream"] }
 tokio = { version = "*", features = ["full"] }
