--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "betterncm_installer"
-version = "1.0.2"
+version = "1.0.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,15 +15,19 @@ druid = { git = "https://github.com/linebender/druid.git", features = [
     "serde",
     "raw-win-handle",
 ] }
-futures = "0.3"
-reqwest = { version = "*", features = ["stream"] }
-tokio = { version = "*", features = ["full"] }
 scl-gui-widgets = { path = "./scl-gui-widgets" }
 serde_json = "1.0.79"
-futures-util = "0.3.14"
 winreg = "0.10.1"
 anyhow = "*"
 pelite = "0.10.0"
-winapi = "*"
 semver = "1.0.16"
 dirs = "*"
+tinyget = { version = "1.0", features = ["https"] }
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+opt-level = "z"
+debug = false
+strip = true
