--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Switch nightly
       run: 
-        rustup default nightly
+        rustup default nightly; rustup target add i686-pc-windows-msvc
     - name: Build
       run: 
         cargo build --verbose --release
