允许自选网易云，自选数据目录，适配x64网易云
fix #62
fix #61 (hopefully)
fix #59

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ pelite = "0.10.0"
 semver = "1.0.16"
 dirs = "*"
 tinyget = { version = "1.0", features = ["https"] }
+rfd = "0.11.4"
 
 [profile.release]
 lto = true
